--- a/tarea nohecha.Rmd
+++ b/tarea nohecha.Rmd
@@ -2,28 +2,24 @@
 title: "Clase de hoy"
 author: "yo"
 date: "2023-08-24"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
- Tarea 1
-# Librería ----
+#Ejercicios Plantas
+
+```{r}
 library(dplyr)
+library(tidyverse)
 library(readxl)
+```
 
-# URL
-url <- "https://raw.githubusercontent.com/MinCiencia/Datos-COVID19/master/output/producto19/CasosActivosPorComuna_std.csv"
-Casos_Activos <- read.csv(url)
-Casos_Activos
+```{r}
+plantas <- read.csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-08-18/plants.csv")
+```
 
-# Intento chat ----
+```{r}
+Plantas1 <- data.frame()
+```
 
-# Calcular la tasa de casos por cada 100,000 habitantes
-(Casos_Activos$Casos.activos/Casos_Activos$Poblacion)*100000
-
-# Identificar las comunas que en algún momento superaron 50 casos por 100,000 habitantes
-comunas_con_mas_de_50 <- unique(Casos_Activos$Comuna[Casos_Activos > 50])
-
-
-
-# Calcular la proporción de comunas que cumplen con el criterio
-proporcion_comunas_mas_de_50 <- length(comunas_con_mas_de_50) / length(unique(Casos_Activos$Comuna))
